Update emulator timeout from 10mins to 20mins

--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -30,6 +30,7 @@ jobs:
           ram-size: 1500M
           heap-size: 2000M
           disk-size: 5000M
+          emulator-boot-timeout: 1200
           script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload Reports
