--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -20,6 +20,9 @@ jobs:
       - name: Build the app
         run: ./gradlew assembleDebug --stacktrace
 
+      - name: Run Unit Tests
+        run: ./gradlew test --stacktrace
+
       - name: Run UI Tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
