--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -26,8 +26,9 @@ jobs:
       - name: Run UI Tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
-          api-level: 33
-          arch: x86_64
+          api-level: 30
+          target: google_apis
+          arch: arm64-v8a
           disable-animations: true
           ram-size: 1500M
           heap-size: 2000M
