--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -37,8 +37,8 @@ jobs:
           script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload Reports
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
+        #if: failure()
         with:
           name: Test-Reports
           path: app/build/reports
-          if: always()
