Clean up caching

--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -17,7 +17,6 @@ jobs:
           distribution: 'adopt'
           cache: 'gradle'
 
-      #Test cache
       - name: Gradle cache
         uses: gradle/gradle-build-action@v2
 
@@ -44,10 +43,6 @@ jobs:
           heap-size: 2000M
           disk-size: 5000M
           script: echo "Generated AVD snapshot for caching."
-      #Test cache
-
-#      - name: Build the app
-#        run: ./gradlew assembleDebug --stacktrace
 
       - name: Run Unit Tests
         run: ./gradlew test --stacktrace
@@ -56,15 +51,14 @@ jobs:
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 33
-          force-avd-creation: false #Test cache
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Test cache
+          force-avd-creation: false #Cache
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Cache
           target: google_apis
           arch: x86_64
           disable-animations: true
           ram-size: 1500M
           heap-size: 2000M
           disk-size: 5000M
-#          emulator-boot-timeout: 1200
           script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload Reports
