--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   connected-tests:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
@@ -17,20 +17,24 @@ jobs:
           distribution: 'adopt'
           cache: 'gradle'
 
-      - name: Build the app
-        run: ./gradlew assembleDebug --stacktrace
+      - name: Run Unit Tests
+        run: ./gradlew test --stacktrace
 
       - name: Run UI Tests
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
-          api-level: 30
+          api-level: 33
           target: google_apis
           arch: x86_64
+          disable-animations: true
+          ram-size: 1500M
+          heap-size: 2000M
+          disk-size: 5000M
           script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload Reports
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
+#        if: failure()
         with:
           name: Test-Reports
           path: app/build/reports
-          if: always()
