Upload index.html report

--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -37,4 +37,4 @@ jobs:
 #        if: failure()
         with:
           name: Test-Reports
-          path: app/build/reports
+          path: app/build/reports/androidTests/connected/index.html
