--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Upload Reports
         uses: actions/upload-artifact@v3
-#        if: failure()
+        if: always()
         with:
           name: Test-Reports
           path: app/build/reports/androidTests/connected/index.html
