--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -17,8 +17,8 @@ jobs:
           distribution: 'adopt'
           cache: 'gradle'
 
-      - name: Gradle cache
-        uses: gradle/gradle-build-action@v2
+#      - name: Gradle cache
+#        uses: gradle/gradle-build-action@v2
 
 #      - name: AVD cache
 #        uses: actions/cache@v3
@@ -47,19 +47,19 @@ jobs:
       - name: Run Unit Tests
         run: ./gradlew test --stacktrace
 
-#      - name: Run UI Tests
-#        uses: ReactiveCircus/android-emulator-runner@v2
-#        with:
-#          api-level: 33
+      - name: Run UI Tests
+        uses: ReactiveCircus/android-emulator-runner@v2
+        with:
+          api-level: 33
 #          force-avd-creation: false #Cache
 #          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Cache
-#          target: google_apis
-#          arch: x86_64
-#          disable-animations: true
-#          ram-size: 1500M
-#          heap-size: 2000M
-#          disk-size: 5000M
-#          script: ./gradlew connectedCheck --stacktrace
+          target: google_apis
+          arch: x86_64
+          disable-animations: true
+          ram-size: 1500M
+          heap-size: 2000M
+          disk-size: 5000M
+          script: ./gradlew connectedCheck --stacktrace
 
       - name: Upload Reports
         uses: actions/upload-artifact@v3
@@ -72,5 +72,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         if: always()
         with:
-          folder: app/build/reports/tests/testDebugUnitTest # The folder the action should deploy.
+          folder: app/build/reports/androidTests/connected # The folder the action should deploy.
           branch: github-pages # Branch to deploy pages to
