--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -17,32 +17,32 @@ jobs:
           distribution: 'adopt'
           cache: 'gradle'
 
-#      - name: Gradle cache
-#        uses: gradle/gradle-build-action@v2
+      - name: Gradle cache
+        uses: gradle/gradle-build-action@v2
 
-#      - name: AVD cache
-#        uses: actions/cache@v3
-#        id: avd-cache
-#        with:
-#          path: |
-#            ~/.android/avd/*
-#            ~/.android/adb*
-#          key: avd-33
-#
-#      - name: create AVD and generate snapshot for caching
-#        if: steps.avd-cache.outputs.cache-hit != 'true'
-#        uses: reactivecircus/android-emulator-runner@v2
-#        with:
-#          api-level: 33
-#          force-avd-creation: false
-#          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-#          target: google_apis
-#          arch: x86_64
-#          disable-animations: false
-#          ram-size: 1500M
-#          heap-size: 2000M
-#          disk-size: 5000M
-#          script: echo "Generated AVD snapshot for caching."
+      - name: AVD cache
+        uses: actions/cache@v3
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-31
+
+      - name: create AVD and generate snapshot for caching
+        if: steps.avd-cache.outputs.cache-hit != 'true'
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 31
+          force-avd-creation: false
+          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          target: google_apis
+          arch: x86_64
+          disable-animations: false
+          ram-size: 1500M
+          heap-size: 2000M
+          disk-size: 5000M
+          script: echo "Generated AVD snapshot for caching."
 
       - name: Run Unit Tests
         run: ./gradlew test --stacktrace
@@ -51,8 +51,8 @@ jobs:
         uses: ReactiveCircus/android-emulator-runner@v2
         with:
           api-level: 31
-#          force-avd-creation: false #Cache
-#          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Cache
+          force-avd-creation: false #Cache
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Cache
           target: google_apis
           arch: x86_64
           disable-animations: true
