--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -4,73 +4,83 @@ on:
 
 jobs:
   connected-tests:
-    runs-on: macos-latest
+    runs-on: unbuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: 11
+#          distribution: 'adopt'
+#          cache: 'gradle'
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+#      - name: Gradle cache
+#        uses: gradle/gradle-build-action@v2
+#
+#      - name: AVD cache
+#        uses: actions/cache@v3
+#        id: avd-cache
+#        with:
+#          path: |
+#            ~/.android/avd/*
+#            ~/.android/adb*
+#          key: avd-31
+#
+#      - name: create AVD and generate snapshot for caching
+#        if: steps.avd-cache.outputs.cache-hit != 'true'
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: 31
+#          force-avd-creation: false
+#          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+#          target: google_apis
+#          arch: x86_64
+#          disable-animations: false
+#          ram-size: 1500M
+#          heap-size: 2000M
+#          disk-size: 5000M
+#          script: echo "Generated AVD snapshot for caching."
+#
+#      - name: Run Unit Tests
+#        run: ./gradlew test --stacktrace
+#
+#      - name: Run UI Tests
+#        uses: ReactiveCircus/android-emulator-runner@v2
+#        with:
+#          api-level: 31
+#          force-avd-creation: false #Cache
+#          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Cache
+#          target: google_apis
+#          arch: x86_64
+#          disable-animations: true
+#          ram-size: 1500M
+#          heap-size: 2000M
+#          disk-size: 5000M
+#          script: ./gradlew connectedCheck --stacktrace
+#
+#      - name: Upload Reports
+#        uses: actions/upload-artifact@v3
+#        if: always()
+#        with:
+#          name: Test-Reports
+#          path: app/build/reports
+#
+#      - name: Deploy Test Results to Github pages 🚀
+#        uses: JamesIves/github-pages-deploy-action@v4
+#        if: always()
+#        with:
+#          folder: app/build/reports/androidTests/connected # The folder the action should deploy.
+#          branch: github-pages # Branch to deploy pages to
+
+      - name: Post to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.24.0
         with:
-          java-version: 11
-          distribution: 'adopt'
-          cache: 'gradle'
-
-      - name: Gradle cache
-        uses: gradle/gradle-build-action@v2
-
-      - name: AVD cache
-        uses: actions/cache@v3
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-31
-
-      - name: create AVD and generate snapshot for caching
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 31
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          target: google_apis
-          arch: x86_64
-          disable-animations: false
-          ram-size: 1500M
-          heap-size: 2000M
-          disk-size: 5000M
-          script: echo "Generated AVD snapshot for caching."
-
-      - name: Run Unit Tests
-        run: ./gradlew test --stacktrace
-
-      - name: Run UI Tests
-        uses: ReactiveCircus/android-emulator-runner@v2
-        with:
-          api-level: 31
-          force-avd-creation: false #Cache
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none #Cache
-          target: google_apis
-          arch: x86_64
-          disable-animations: true
-          ram-size: 1500M
-          heap-size: 2000M
-          disk-size: 5000M
-          script: ./gradlew connectedCheck --stacktrace
-
-      - name: Upload Reports
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: Test-Reports
-          path: app/build/reports
-
-      - name: Deploy Test Results to Github pages 🚀
-        uses: JamesIves/github-pages-deploy-action@v4
-        if: always()
-        with:
-          folder: app/build/reports/androidTests/connected # The folder the action should deploy.
-          branch: github-pages # Branch to deploy pages to
+          channel-id: 'C05NJ1GK5V2' #espresso-testrun channel
+          # For posting a simple plain text message
+          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
