--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -7,15 +7,15 @@ jobs:
     runs-on: unbuntu-latest
 
     steps:
-#      - name: Checkout
-#        uses: actions/checkout@v3
-#
-#      - name: Set up JDK 11
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: 11
-#          distribution: 'adopt'
-#          cache: 'gradle'
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'adopt'
+          cache: 'gradle'
 
 #      - name: Gradle cache
 #        uses: gradle/gradle-build-action@v2
