--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -4,18 +4,18 @@ on:
 
 jobs:
   connected-tests:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: 11
-          distribution: 'adopt'
-          cache: 'gradle'
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3
+#
+#      - name: Set up JDK 11
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: 11
+#          distribution: 'adopt'
+#          cache: 'gradle'
 
 #      - name: Gradle cache
 #        uses: gradle/gradle-build-action@v2
