--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -83,5 +83,5 @@ jobs:
           # For posting a simple plain text message
           slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
         env:
-          SLACK_BOT_TOKEN: "xoxb-5590941865232-5761865217717-CsDYmRXl9IImvLqBnO9PZdZk
-"
+          SLACK_BOT_TOKEN: "xoxb-5590941865232-5761865217717-CsDYmRXl9IImvLqBnO9PZdZk"
+#xoxb-5590941865232-5761865217717-WiacmnqBMIL6pXLIlXH72C5Y
