--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -75,13 +75,25 @@ jobs:
 #          folder: app/build/reports/androidTests/connected # The folder the action should deploy.
 #          branch: github-pages # Branch to deploy pages to
 
-      - name: Post to a Slack channel
-        id: slack
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          channel-id: 'C05NJ1GK5V2' #espresso-testrun channel
-          # For posting a simple plain text message
-          slack-message: "Android UI Test result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+#      - name: Post to a Slack channel
+#        id: slack
+#        uses: slackapi/slack-github-action@v1.24.0
+#        if: always()
+#        with:
+#          channel-id: 'C05NJ1GK5V2' #espresso-testrun channel
+#          # For posting a simple plain text message
+#          slack-message: "Android UI Test result: ${{ job.status }} \n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+#        env:
+#          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT }}
+#          PULL_REQUEST_URL: ${{ github.event.pull_request.html_url }}
+
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
         env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT }}
-          PULL_REQUEST_URL: ${{ github.event.pull_request.html_url }}
+          SLACK_CHANNEL: general
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
+          SLACK_MESSAGE: 'Post Content :rocket:'
+          SLACK_TITLE: Post Title
+          SLACK_USERNAME: rtCamp
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
