--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -87,11 +87,13 @@ jobs:
 #          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT }}
 #          PULL_REQUEST_URL: ${{ github.event.pull_request.html_url }}
 
-      - name: Slack Notification
+      - name: Post Android Test results to Slack channel (espresso-testruns)
         uses: rtCamp/action-slack-notify@v2
+        if: always()
         env:
           SLACK_CHANNEL: espresso-testruns
           SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
-          SLACK_TITLE: Espresso tests
+          SLACK_TITLE: Android Tests results
           SLACK_MESSAGE: ${{ job.status }}
+          SLACK_FOOTER: 'Latest UI Test Results: https://full-stack-automators.github.io/native-android-quiz-app'
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
