--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -83,5 +83,5 @@ jobs:
           SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
           SLACK_TITLE: Android Tests results
           SLACK_MESSAGE: ${{ job.status }}
-          SLACK_FOOTER: 'Latest UI Test Results:' ${{ vars.ESPRESSO_TEST_RESULTS_URL }}
+          SLACK_FOOTER: 'Latest UI Test Results: https://full-stack-automators.github.io/native-android-quiz-app' #${{ vars.ESPRESSO_TEST_RESULTS_URL }}
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
