--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  connected-tests:
+  run-android-tests:
     runs-on: macos-latest
 
     steps:
@@ -68,21 +68,17 @@ jobs:
           name: Test-Reports
           path: app/build/reports
 
-  push-test-results:
-    if: always()
-    needs: connected-tests
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
       - name: Deploy Test Results to Github pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         if: always()
         with:
-          folder: app/build/reports/androidTests/connected # The folder the action should deploy.
+          folder: app/build/reports/androidTests/connected # Users/runner/work/native-android-quiz-app/native-android-quiz-app/app/build/reports/androidTests/connected
           branch: github-pages # Branch to deploy pages to
+
+  slack-notification:
+    if: always()
+    needs: run-android-tests
+    runs-on: ubuntu-latest
 
       - name: Post Android Test results to Slack channel (espresso-testruns)
         uses: rtCamp/action-slack-notify@v2
