--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -80,6 +80,7 @@ jobs:
     needs: run-android-tests
     runs-on: ubuntu-latest
 
+    steps:
       - name: Post Android Test results to Slack channel (espresso-testruns)
         uses: rtCamp/action-slack-notify@v2
         if: always()
