--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -91,6 +91,8 @@ jobs:
     needs: run-android-tests
 
     steps:
+      - uses: actions/checkout@v3
+
       - name: Download Unit test report
       - uses: actions/download-artifact@v3
         with:
