--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -78,7 +78,7 @@ jobs:
           path: app/build/reports
 
       #Upload unittest report
-      - name: Upload Reports
+      - name: Upload Unit Test Reports
         uses: actions/upload-artifact@v3
         if: always()
         with:
@@ -91,6 +91,8 @@ jobs:
     needs: run-android-tests
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 #      - name: Download Unit test report
       - uses: actions/download-artifact@v3
         with:
