name Download unit test report

--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -93,7 +93,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-#      - name: Download Unit test report
+
+      - name: Download UnitTest Report
       - uses: actions/download-artifact@v3
         with:
           name: Unit-Test-Reports
