--- a/.github/workflows/androidTests.yaml
+++ b/.github/workflows/androidTests.yaml
@@ -3,8 +3,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  connected-tests:
+  run-android-tests:
     runs-on: macos-latest
+    outputs:
+      jobstatus: ${{ steps.savedJobstatus.outputs.result }}
 
     steps:
       - name: Checkout
@@ -61,16 +63,55 @@ jobs:
           disk-size: 5000M
           script: ./gradlew connectedCheck --stacktrace
 
-      - name: Upload Reports
+      # Save job status
+      - id: savedJobstatus
+        if: always()
+        run: |
+          currentJobStatus=${{ job.status }}
+          echo "result=$currentJobStatus" >> $GITHUB_OUTPUT
+
+      - name: Upload Unit Test Reports
         uses: actions/upload-artifact@v3
         if: always()
         with:
-          name: Test-Reports
-          path: app/build/reports
+          name: Unit-Test-Report
+          path: app/build/reports/tests
+
+      - name: Upload UI Test Reports
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: UI-Test-Report
+          path: app/build/reports/androidTests/connected
+
+  publish-android-test-results:
+    if: always()
+    runs-on: ubuntu-latest
+    needs: run-android-tests
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: UI-Test-Report
+          path: app/build/reports/androidTests/connected
 
       - name: Deploy Test Results to Github pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         if: always()
         with:
-          folder: app/build/reports/androidTests/connected # The folder the action should deploy.
-          branch: github-pages # Branch to deploy pages to
+          folder: app/build/reports/androidTests/connected
+          branch: github-pages # Branch name to deploy pages
+
+      - name: Post Android Test results to Slack channel (espresso-testruns)
+        uses: rtCamp/action-slack-notify@v2
+        if: always()
+        env:
+          SLACK_CHANNEL: espresso-testruns
+          SLACK_COLOR: ${{ needs.run-android-tests.outputs.jobstatus }}
+          SLACK_TITLE: Android Tests results
+          SLACK_MESSAGE: ${{ needs.run-android-tests.outputs.jobstatus }} - ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+          SLACK_FOOTER: Latest UI Test Results - ${{ vars.ESPRESSO_TEST_RESULTS_URL }}
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
